--- a/TodoList/assets/css/ToDoList.css
+++ b/TodoList/assets/css/ToDoList.css
@@ -10,6 +10,7 @@ h1{
 
 .contenerP{
     width: 500px;
+    margin-top: 20%;
     margin-left: auto;
     margin-right: auto;
     background-color: lightgoldenrodyellow;
@@ -21,6 +22,7 @@ h1{
 }
 
 .contener{
+    border-radius: 20px;
     background-color: lightgoldenrodyellow;
     display: grid;
     justify-content: center;
